--- a/css/main.css
+++ b/css/main.css
@@ -8,14 +8,97 @@ section#main{
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: scroll;
-  background-position: center center;
+  background-position: center ;
   color:#FFF;
   width: 100%;
-  height: 40vh;
+  height: 100vh;
 }
 
 footer{
   color: #FFFF;
   background-color: black;
 }
-  
+.banner{
+  letter-spacing: 1.5rem;
+  position: absolute;
+  color: white;
+  background-color: rgba(0,0,0,.6);
+  padding: 2% 8%;
+  top: 30%;
+  left: 12.5%;
+  width: 75%;
+  text-align: center;
+}
+hr{
+  color:#fff;
+  border:2px solid;
+}
+.border {
+  background: #52edc7;
+  width: 70%;
+  margin: 0 auto;
+  padding: 1px;
+}
+#about-me ul {
+  padding: 0;
+  margin: 45px 0 0 0;
+}
+#about-me ul li {
+  list-style-type: none;
+  display: inline-block;
+  margin-right: 25px;
+}
+#about-me a{
+  text-decoration: none;
+  color: #3333;
+}
+.strip {
+  margin: 28px 0 0px 0;
+}
+section{
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+.blog {
+  padding: 60px 0;
+}
+.blog-grids {
+  margin-top: 50px;
+}
+.blog-text-info:nth-child(1), .blog-text-info:nth-child(2), .blog-text-info:nth-child(3) {
+  margin-bottom: 30px;
+}
+.blog-text-info {
+  position: relative;
+}
+.blog-grid {
+  border: 1px solid #dedede;
+  border-radius: 4px;
+}
+.blog-grid a {
+  text-decoration: none;
+  font-size: 20px;
+  color: #2b2b2b;
+  font-family: 'Lato', sans-serif;
+  font-weight: 700;
+}
+.blog-grid img {
+  width: 100%;
+}
+.blog-text {
+  padding: 60px 20px 25px 20px;
+}
+.stripa {
+  background: #dedede;
+  width: 30%;
+  height: 1px;
+  margin: 15px 0;
+}
+.blog-grid p {
+  font-family: 'Lato', sans-serif;
+  line-height: 1.8em;
+  margin: 0;
+  font-size: 16px;
+  color: #888b90;
+  font-weight: 300;
+}
