--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,8 @@ hr{
 #contact ul li {
   list-style-type: none;
   display: inline-block;
-  margin-right: 25px;
+  margin: 25px;
+  padding: 15px;
 }
 #contact a{
   text-decoration: none;
