--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,7 @@ hr{
   text-decoration: none;
   color: #3333;
 }
-#skills{
+#skill{
   background-color: #ddedf8;
   transform:skew(0deg, -5deg);
 }
